# macos_3d_shape

./: .gitignore  3d_engine.code-workspace  CMakeLists.txt  camera.cpp  display.cpp  main  main.cpp  mesh3d.cpp  object.cpp  plane.cpp  point2d.cpp  point3d.cpp  ray.cpp  scene.cpp
headers/: camera.hpp  display.hpp  mesh3d.hpp  object.hpp  plane.hpp  point2d.hpp  point3d.hpp  ray.hpp  scene.hpp
main.dSYM/Contents/Resources/DWARF/: main
